Navifation: Fix layout bugs.

--- a/client/styles/common/_navigation.scss
+++ b/client/styles/common/_navigation.scss
@@ -13,6 +13,7 @@
 .user-nav {
   @include container;
   position: relative;
+  margin: 0 auto;
 }
 
 .navigation-switch {
