--- a/client/styles/components/_account-nav.scss
+++ b/client/styles/components/_account-nav.scss
@@ -1,13 +1,14 @@
-.user-nav {
+.app-nav {
+  display: block;
+  position: fixed;
   z-index: 1000;
-  position: relative;
+  width: 100%;
 }
 
 .account-nav {
-  position: fixed;
+  position: absolute;
   right: 0;
   top: 0;
-  z-index: 10;
 
   @include susy-breakpoint($tablet) {
     right: 170px;
